@@ -1,3 +1,11 @@
+2008-01-10  Andreas Røsdal  <andreasr@gnome.org>
+
+	* src/glchess.in:
+	* src/glchess.in.in:
+	* src/lib/defaults.py.in: Allow glChess to be run from source distribution, without
+	requiring a full install. To run glChess from the source distribution, 
+	simply execute make and then: $ python glchess/src/glchess
+
 2007-12-27  Robert Ancell  <robert.ancell@gmail.com>
 
 	* Fix bugs in SAN move generation (correctly record takes for en passant, show check hints for
